fix url mapping.
